[package]
name = "idena-indexer-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.10", features = ["json"] }
api = { path = "./api" }
tokio = { version = "1.25.0", features = ["full"] }
sled = "0.34.7"
lazy_static = "1.4.0"
actix-web = "4"
rocket = "0.5.0-rc.2"
diesel = { version = "2.0.0", features = ["postgres"] }
dotenvy = "0.15"